# free-throw-arm-bot

./: .gitignore  README.md  main.py  main.qmd  pick_and_place.xml  pyproject.toml
envs/: fetch_throw_env.py
scripts/: collect_demonstrations.py  expert_policy.py
