[project]
name = "free-throw-arm-bot"
version = "0.1.0"
description = "Accelerating Basketball Free Throw Skill Acquisition with BC and RL"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "gymnasium==0.29.1",
    "gymnasium-robotics==1.2.2",
    "mujoco==2.3.3",
    "imitation>=1.0.0",
    "stable-baselines3>=2.0.0",
]